[package]
name = "orbital"
version = "0.1.0"
edition = "2021"
authors = ["HalsekiRaika <reirokusanami.rdh@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/HalsekiRaika/orbital.git"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/program.rs"

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits", "parsing", "full"] }

[dev-dependencies]
trybuild = "1.0"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"